--- a/monespace/src/main/webapp/resources/css/bootstrap.css
+++ b/monespace/src/main/webapp/resources/css/bootstrap.css
@@ -4321,7 +4321,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   .navbar > .container .navbar-brand,
   .navbar > .container-fluid .navbar-brand {
     margin-left: -15px;
-    background-color: #607D8B;
+    background-color: #ffffff;
   }
 }
 .navbar-toggle {
@@ -4335,6 +4335,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   background-image: none;
   border: 1px solid transparent;
   border-radius: 4px;
+      background-color: white;
 }
 .navbar-toggle:focus {
   outline: 0;
