--- a/monespace/src/main/webapp/resources/css/my-style.css
+++ b/monespace/src/main/webapp/resources/css/my-style.css
@@ -554,7 +554,7 @@ container-fluid {
 
 @import "//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css";
 .container1 {
-    margin-top: 20px;
+    margin-top: 50px;
 }
 
 /* Carousel Styles */
@@ -804,7 +804,11 @@ input[type=radio], input[type=checkbox]
 
 /**************************************************/
 
+/********Payment Interface ***********/
 
+
+
+/***************************************/
 
 
 
