--- a/monespace/src/main/webapp/resources/css/bootstrap.css
+++ b/monespace/src/main/webapp/resources/css/bootstrap.css
@@ -1116,7 +1116,8 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #337ab7;
+  color: #f5f5f5;
+  /*#337ab7;*/
   text-decoration: none;
 }
 a:hover,
@@ -4498,6 +4499,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-btn.btn-sm {
   margin-top: 10px;
   margin-bottom: 10px;
+  background-color:#009688
+  
 }
 .navbar-btn.btn-xs {
   margin-top: 14px;
@@ -4527,11 +4530,13 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #f8f8f8;
-  border-color: #e7e7e7;
+  background-color: #009688
+;
+  border-color: #009688
+;
 }
 .navbar-default .navbar-brand {
-  color: #777;
+  color: #400040;
 }
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
