--- a/monespace/src/main/webapp/resources/css/my-style.css
+++ b/monespace/src/main/webapp/resources/css/my-style.css
@@ -152,7 +152,7 @@
     color: #fff;
 }
 
-/********************************************************************************************************/
+
 /**********footer-Bottom*****************/
 .pull-left {
 	color: #fff;
@@ -210,7 +210,7 @@ color: #fff;
 background-color: #286090;
 border-color: #204d74;
 }
-/******************************************************************************************/
+
 
 /************************** navbar dropdown on hover************************************/
 
@@ -388,7 +388,7 @@ border-color: #204d74;
                 text-decoration: none; 
                 outline: none;
             }
-/*****************************************************************************************************************/
+
 /*********************************** Carousel ****************************************************************/
 .media-carousel 
 {
@@ -446,9 +446,7 @@ border-color: #204d74;
 
 /**************************************************************************************************************/
 
-/*****************/
-/* body { padding-top:50px; } */
-/*****************/
+
 /********TABLE**********/
 
 .custab{
@@ -808,13 +806,12 @@ input[type=radio], input[type=checkbox]
 
 /**************************************************/
 
-/********Payment Interface ***********/
-
-
-
-/***************************************/
-
-
+ #googleMap {
+      width: 100%;
+      height: 400px;
+      -webkit-filter: grayscale(100%);
+      filter: grayscale(100%);
+  }  
 
 
 
